--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ iframe{
     border-radius: 8px;
    
 }
+.icon{
+  color: black;
+}
 .pbutton:hover{
     color: red;
     background-color: rgb(255, 255, 255);
